--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="Robot-T410 User Interface"
       content="Application to configure the T410 Robot"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="robot-icon" href="%PUBLIC_URL%/robot.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>T410 UI</title>
   </head>
